fix: visibility in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@
     opacity: 0.3;
   }
   100% {
-    height: 63px;
+    height: 78px;
     transform: scale(1);
     opacity: 1;
   }
